# BiscuITs

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tictactoe.py
doc/: .gitignore  get_git_version.py  index.adoc  prompt.adoc
doc/images/: component-diagram.mermaid  component_diagram.puml  sequence-diagram.mermaid  sequence_diagram.puml
docker/: docker-compose.yml
microservice1/: main.py  requirements.txt
microservice2/: main.py
services/microservice1/: Dockerfile  app.py
services/microservice2/: Dockerfile  worker.py
streamlit/: Dockerfile  streamlit_app.py
ui/: Dockerfile  app.py
