[tool.poetry]
name = "biscuits"
version = "0.1.0"
description = "KI-gestützte Softwareentwicklung"
authors = ["Daniel Senften <daniel.senften@ffhs.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pika = "^1.3.2"
requests = "^2.32.3"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
openai = "^1.61.1"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
